# tpwalk

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
data/: dead.json  dead.txt  s5cmd_download.txt  verified.json  verified.txt
data/scrapes/2026-05-30-recovered/: recovered.txt
data/scrapes/2026-05-30T1821-manual/: archive_org.txt  buildsys.txt  forums.txt  wayback_cdx.txt  wayback_extra_shapes.txt
docs/: index.md
docs/commands/: bruteforce.md  scrape.md  verify.md
docs/getting-started/: installation.md  quick-start.md
docs/guide/: how-it-works.md  responsible-use.md
tests/: __init__.py  conftest.py  test_bruteforce_dates.py  test_bruteforce_head.py  test_bruteforce_models.py  test_bruteforce_runner.py  test_cli.py  test_client.py  test_normalize.py  test_scrape_cc.py  test_scrape_forums.py  test_scrape_github.py  test_scrape_google.py  test_scrape_mercusys.py  test_scrape_model_sweep.py  test_scrape_reddit.py  test_scrape_regional.py  test_scrape_runner.py  test_scrape_wayback.py  test_verify_head.py  test_verify_reader.py  test_verify_runner.py
tpwalk/: __init__.py  _client.py  _normalize.py  cli.py  models.py
tpwalk/bruteforce/: __init__.py  _dates.py  _head.py  _models.py
tpwalk/scrape/: __init__.py  _common_crawl.py  _forums.py  _github.py  _google.py  _mercusys.py  _model_sweep.py  _reddit.py  _regional.py  _wayback.py
tpwalk/verify/: __init__.py  _head.py  _reader.py
(+23 files in other folders)
