[project]
name = "tpwalk"
version = "0.1.0"
description = "TP-Link GPL source and firmware URL scraper, verifier, and downloader"
readme = "README.md"
requires-python = ">=3.14"
license = "Apache-2.0"
dependencies = [
    "httpx[http2]",
    "beautifulsoup4",
    "lxml",
    "rich",
    "typer",
]

[project.scripts]
tpwalk = "tpwalk.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
]
docs = [
    "mkdocs-material",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tpwalk"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 320

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",   # trailing comma — conflicts with ruff formatter
    "ISC001",   # implicit string concat — conflicts with ruff formatter
    "D203",     # blank line before class docstring — incompatible with D211
    "D213",     # multi-line summary second line — incompatible with D212
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ALL"]

[tool.ty.environment]
python-version = "3.14"

[tool.ty.rules]
all = "error"

[tool.ty.terminal]
error-on-warning = true

[tool.ty.src]
exclude = ["tests/"]
